# rp3802

./: .gitignore  CMakeLists.txt  LICENSE  README.md  csrdwr.pio  fifo.h  led.pio  rp3802.cpp  rp3802.pio
.github/workflows/: macOS.yml
board/: RPi_Pico.bak  RPi_Pico.kicad_sym  fp-info-cache  rp3802.kicad_pcb  rp3802.kicad_prl  rp3802.kicad_pro  rp3802.kicad_sch
board/RPi_Pico.pretty/: DIP-40_W15.24mm_NO_IC.kicad_mod
